Add images to all posts

--- a/astrowind/src/content/post/blog/2018/backup-linux-workspace/index.mdx
+++ b/astrowind/src/content/post/blog/2018/backup-linux-workspace/index.mdx
@@ -2,8 +2,7 @@
 title: 'Take Your Linux Workspace Anywhere: Backup for Nerds'
 publishDate: 2018-11-24
 image: /blog/2018/backup-linux-workspace.jpg
-authors:
-  - steve
+author: Steve Grice
 tags:
   - linux
   - productivity
