--- a/astrowind/src/content/post/blog/2018/binary-search-tree/index.mdx
+++ b/astrowind/src/content/post/blog/2018/binary-search-tree/index.mdx
@@ -1,17 +1,13 @@
 ---
 title: How to Implement a Binary Search Tree in Python
 publishDate: 2018-04-19
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+image: /public/blog/2018/binary-search-tree.png
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: binary-search-tree
 ---
-
-![Example of a Binary Search Tree](./1example_tree.png)
 
 Decisions, decisions... Life is all about choices! Usually there are so many ways to go. An infinite expanse of roads and pathways stretches in front of you, an endless gradient of details; as you consider them, your head starts to spin, your eyes start to droop, your mind races, your head pounds -
 
