--- a/astrowind/src/content/post/blog/2018/insertion-sort-python/insertion-sort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/insertion-sort-python/insertion-sort-python.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Insertion Sort in Python"
 publishDate: 2018-10-13
+image: http://i3.ytimg.com/vi/-wwk5QXk-AA/hqdefault.jpg
 author: Steve Grice
 category: Data Structures & Algorithms
 tags:
