--- a/astrowind/src/content/post/blog/2020/10-minute-linux/10-minute-linux.mdx
+++ b/astrowind/src/content/post/blog/2020/10-minute-linux/10-minute-linux.mdx
@@ -1,6 +1,7 @@
 ---
 title: "10 Minute Linux Crash Course - Everything You Need to Get Started Now"
 publishDate: 2020-11-30
+image: http://i3.ytimg.com/vi/XKvmgtOidYU/hqdefault.jpg
 author: Steve Grice
 tags:
   - linux
