--- a/astrowind/src/content/post/blog/2020/90-sec/docker-windows.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/docker-windows.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Install Docker on Windows 10 Pro"
 publishDate: 2020-04-22
+image: http://i3.ytimg.com/vi/Jl_C_sy02MA/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
