--- a/astrowind/src/content/post/blog/2020/90-sec/julia-windows.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/julia-windows.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Install Julia Programming Language on Windows"
 publishDate: 2020-05-19
+image: http://i3.ytimg.com/vi/59_sTxdsGiI/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
