--- a/astrowind/src/content/post/blog/2020/90-sec/opengl-glut-linux.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/opengl-glut-linux.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: First OpenGL Program with GLUT (Linux)"
 publishDate: 2020-06-03
+image: http://i3.ytimg.com/vi/cShqFtmDTQE/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
