--- a/astrowind/src/content/post/blog/2020/90-sec/python-ubuntu.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/python-ubuntu.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Install Python (Ubuntu)"
 publishDate: 2020-09-09
+image: http://i3.ytimg.com/vi/z4xMES7s5eU/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
