--- a/astrowind/src/content/post/blog/2020/90-sec/qt-ubuntu.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/qt-ubuntu.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Hello World with Qt Framework (Ubuntu)"
 publishDate: 2020-05-06
+image: http://i3.ytimg.com/vi/d1JGsHc1NGA/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
