--- a/astrowind/src/content/post/blog/2020/90-sec/selenium-ubuntu.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/selenium-ubuntu.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Install Selenium for Python on Ubuntu"
 publishDate: 2020-03-25
+image: http://i3.ytimg.com/vi/MTarw_BUR-M/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
