--- a/astrowind/src/content/post/blog/2020/duobot/index.mdx
+++ b/astrowind/src/content/post/blog/2020/duobot/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "DuoBot: Topping the DuoLingo Charts with Selenium"
 publishDate: 2020-04-08
+image: http://i3.ytimg.com/vi/zhjWD8O564Q/hqdefault.jpg
 author: Steve Grice
 tags:
   - python
