--- a/astrowind/src/content/post/blog/2020/pkos/10.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/10.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS10: Running on Real Hardware"
 publishDate: 2020-07-15
+image: http://i3.ytimg.com/vi/-V-eKSKwexs/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
