--- a/astrowind/src/content/post/blog/2020/pkos/11.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/11.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS11: Calling Assembly from C"
 publishDate: 2020-07-29
+image: http://i3.ytimg.com/vi/ZsnKjqsFwwY/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
