--- a/astrowind/src/content/post/blog/2020/pkos/12.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/12.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS12: Basic Keyboard Driver (x86 Interrupts)"
 publishDate: 2020-08-12
+image: http://i3.ytimg.com/vi/YtnNX074jMU/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
