--- a/astrowind/src/content/post/blog/2020/pkos/2.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/2.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS2: First Bootloader"
 publishDate: 2020-01-01
+image: http://i3.ytimg.com/vi/1lAuJoPZ3Q0/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
