--- a/astrowind/src/content/post/blog/2020/pkos/4.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/4.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS4: Deciphering BIOS Challenges"
 publishDate: 2020-01-29
+image: http://i3.ytimg.com/vi/9dU7CyKkHew/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
