--- a/astrowind/src/content/post/blog/2020/pkos/5.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/5.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS5: Going Over print_hex"
 publishDate: 2020-02-12
+image: http://i3.ytimg.com/vi/IvUl1ocS64g/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
