--- a/astrowind/src/content/post/blog/2020/pkos/6.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/6.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS6: Reading the Disk"
 publishDate: 2020-02-26
+image: http://i3.ytimg.com/vi/mktENQzbm6k/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
