--- a/astrowind/src/content/post/blog/2020/pkos/7.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/7.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS7: Protected Mode - Making the Jump!"
 publishDate: 2020-03-11
+image: http://i3.ytimg.com/vi/IU9zXYdYV9I/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
