--- a/astrowind/src/content/post/blog/2020/pkos/9.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/9.mdx
@@ -1,8 +1,8 @@
 ---
 title: "OS9: Multiboot (Bootloader Breakup)"
 publishDate: 2020-07-01
-authors:
-  - steve
+image: http://i3.ytimg.com/vi/UraQLWvn9Vg/hqdefault.jpg
+author: Steve Grice
 category: PageKey Operating System
 tags:
   - tutorial
