--- a/astrowind/src/content/post/blog/2020/quick-python/1-loop-and-data-types.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/1-loop-and-data-types.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 1: Your First Loop & Data Types"
 publishDate: 2020-09-23
+image: http://i3.ytimg.com/vi/ydQASRg1dZE/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
