--- a/astrowind/src/content/post/blog/2020/quick-python/2-easy-user-input.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/2-easy-user-input.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 2: Easy User Input"
 publishDate: 2020-10-07
+image: http://i3.ytimg.com/vi/auVvAigLvK0/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
