--- a/astrowind/src/content/post/blog/2020/quick-python/4-sipping-from-file.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/4-sipping-from-file.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 4: Sipping from a File (Open/Print Contents)"
 publishDate: 2020-11-04
+image: http://i3.ytimg.com/vi/osREJ2ksyW4/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
