--- a/astrowind/src/content/post/blog/2020/quick-python/5-writing-files.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/5-writing-files.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 5: Writing Files"
 publishDate: 2020-11-18
+image: http://i3.ytimg.com/vi/t-hqxcGsJvU/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
