--- a/astrowind/src/content/post/blog/2020/quick-python/7-easy-web-request.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/7-easy-web-request.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 7: Easy Web Request"
 publishDate: 2020-12-16
+image: http://i3.ytimg.com/vi/KkbkMDDbI9M/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
