--- a/astrowind/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
+++ b/astrowind/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Boom! A new app is born."
 publishDate: 2021-03-24
+image: /public/blog/2021/boom-v1.0-writeup.svg
 author: Steve Grice
 category: Boom Languages
 tags:
@@ -9,7 +10,6 @@ tags:
   - language
 ---
 
-![Boom! Languages Logo](./boom-logo.svg)
 <figcaption>The Boom! Languages logo, created by Nick Fulfaro (<a href="https://instagram.com/fulfaroanimations">@fulfaroanimations</a>).</figcaption>
 
 About four months ago, in late November 2020, I finally took action on an ambitious plan that I've had in the back of my head for quite a while. I wanted to build a language-learning app that was just a bit different than the others I've tried.
