--- a/astrowind/src/content/post/blog/2023/pkos-21/es.mdx
+++ b/astrowind/src/content/post/blog/2023/pkos-21/es.mdx
@@ -2,8 +2,7 @@
 title: "OS21: Más PCI + Empezando con Almacenamiento (IDE, SATA)"
 publishDate: 2023-07-10
 image: http://i3.ytimg.com/vi/HvZy19u1HDc/hqdefault.jpg
-authors:
-  - steve
+author: Steve Grice
 category: PageKey Operating System
 tags:
   - c
