--- a/astrowind/src/content/post/blog/2023/self-hosting/nextjs-k3s.mdx
+++ b/astrowind/src/content/post/blog/2023/self-hosting/nextjs-k3s.mdx
@@ -3,8 +3,7 @@ title: "Self-Host NextJS on Kubernetes (Tutorial)"
 publishDate: 2023-10-08
 image: http://i3.ytimg.com/vi/ZysSRWPgAyY/hqdefault.jpg
 author: Steve Grice
-categories:
-  - Self-Hosting
+category: Self-Hosting
 tags:
   - javascript
   - kubernetes
