--- a/astrowind/src/content/post/blog/2018/bubble-sort-python/bubble-sort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/bubble-sort-python/bubble-sort-python.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Bubble Sort in Python"
 publishDate: 2018-10-05
+image: http://i3.ytimg.com/vi/LmZLKhd2Juc/hqdefault.jpg
 author: Steve Grice
 category: Data Structures & Algorithms
 tags:
