--- a/astrowind/src/content/post/blog/2018/merge-sort/merge-sort.mdx
+++ b/astrowind/src/content/post/blog/2018/merge-sort/merge-sort.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Merge Sort in Python"
 publishDate: 2018-09-28
+image: http://i3.ytimg.com/vi/syHhPKK00Rc/hqdefault.jpg
 author: Steve Grice
 category: Data Structures & Algorithms
 tags:
