--- a/astrowind/src/content/post/blog/2018/quicksort-python/quicksort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/quicksort-python/quicksort-python.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quicksort in Python"
 publishDate: 2018-09-23
+image: http://i3.ytimg.com/vi/OSD4b-ih6Kc/hqdefault.jpg
 author: Steve Grice
 category: Data Structures & Algorithms
 tags:
