--- a/astrowind/src/content/post/blog/2019/pkos-1/pkos-1.mdx
+++ b/astrowind/src/content/post/blog/2019/pkos-1/pkos-1.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS1: Installing VirtualBox and Debian"
 publishDate: 2019-12-23
+image: http://i3.ytimg.com/vi/NtZzb9ZJ5Fo/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
