--- a/astrowind/src/content/post/blog/2019/scrollmagic/scrollmagic.mdx
+++ b/astrowind/src/content/post/blog/2019/scrollmagic/scrollmagic.mdx
@@ -1,6 +1,7 @@
 ---
 title: Make Your Site Stand Out with ScrollMagic
 publishDate: 2019-04-26
+image: http://i3.ytimg.com/vi/8jtLCrvUddA/hqdefault.jpg
 author: Steve Grice
 tags:
   - javascript
