--- a/astrowind/src/content/post/blog/2020/90-sec/python-windows.mdx
+++ b/astrowind/src/content/post/blog/2020/90-sec/python-windows.mdx
@@ -1,6 +1,7 @@
 ---
 title: "≤90s: Install Python (Windows 10)"
 publishDate: 2020-08-26
+image: http://i3.ytimg.com/vi/fA-9FyBPN18/hqdefault.jpg
 author: Steve Grice
 category: 90 Seconds or Less
 tags:
