--- a/astrowind/src/content/post/blog/2020/pkos/3.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/3.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS3: Hone the Power of the BIOS!"
 publishDate: 2020-01-15
+image: http://i3.ytimg.com/vi/W3DdyiO3Fy8/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
