--- a/astrowind/src/content/post/blog/2020/pkos/8.mdx
+++ b/astrowind/src/content/post/blog/2020/pkos/8.mdx
@@ -1,6 +1,7 @@
 ---
 title: "OS8: Calling C from Assembly"
 publishDate: 2020-06-17
+image: http://i3.ytimg.com/vi/5RWjI83C47k/hqdefault.jpg
 author: Steve Grice
 category: PageKey Operating System
 tags:
