--- a/astrowind/src/content/post/blog/2020/quick-python/3-error-handling.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/3-error-handling.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 3: Error Handling (Actually pretty useful!)"
 publishDate: 2020-10-21
+image: http://i3.ytimg.com/vi/pgppd2fwrJQ/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
