--- a/astrowind/src/content/post/blog/2020/quick-python/6-first-data-pipeline.mdx
+++ b/astrowind/src/content/post/blog/2020/quick-python/6-first-data-pipeline.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Python 6: Our First Data Pipeline"
 publishDate: 2020-12-02
+image: http://i3.ytimg.com/vi/VCqwKazLLbY/hqdefault.jpg
 author: Steve Grice
 category: Quick Python
 tags:
