--- a/astrowind/src/content/post/blog/2023/rust-sr/2.mdx
+++ b/astrowind/src/content/post/blog/2023/rust-sr/2.mdx
@@ -3,8 +3,7 @@ title: "Variables & Mutability | Rust Book Speedrun 2"
 publishDate: 2023-02-21
 image: http://i3.ytimg.com/vi/F5Ni0Xa1bcE/hqdefault.jpg
 author: Steve Grice
-categories:
-  - Rust Book Speedrun
+category: Rust Book Speedrun
 tags:
   - rust
 ---
