Delete old non-astro files, add back codigo clave

--- a/astrowind/src/content/post/blog/2022/codigo-clave/1.mdx
+++ b/astrowind/src/content/post/blog/2022/codigo-clave/1.mdx
@@ -1,18 +1,18 @@
 ---
-title: "Introducción"
-date: 2022-05-15
-categories:
-  - 9 Días de Código
-authors:
-  - steve
-slug: codigo-1
+title: "CC1: Introducción"
+publishDate: 2022-05-15
+image: http://i3.ytimg.com/vi/ceQ3J6IvJ2M/hqdefault.jpg
+author: Steve Grice
+category: 9 Días de Código
+tags:
+  - spanish
 ---
 
 Hola a todos, soy Steve y hoy ¡comienzo un viaje de hacer videos en español!
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/ceQ3J6IvJ2M)
+<BlogYoutubeVideo videoId="ceQ3J6IvJ2M" />
 
 Intento publicar un video nuevo cada día si puedo, pero hay tanto que hacer, que no sé si lo realizaré. Pero ten paciencia conmigo - juntos, podemos alcanzar esta meta de cien días.
 
