--- a/astrowind/src/content/post/blog/2022/codigo-clave/9.mdx
+++ b/astrowind/src/content/post/blog/2022/codigo-clave/9.mdx
@@ -1,20 +1,19 @@
 ---
-title: "Fijamos Errores, Ponemos Estilo"
-date: 2022-05-23
-categories:
-  - 9 Días de Código
+title: "CC9: Fijamos Errores, Ponemos Estilo"
+publishDate: 2022-05-23
+image: http://i3.ytimg.com/vi/bDhf7tLZJ5E/hqdefault.jpg
+author: Steve Grice
+category: 9 Días de Código
 tags:
   - javascript
   - python
-authors:
-  - steve
-slug: codigo-9
+  - spanish
 ---
 
 En este video fijamos unos errores con nuestro código JavaScript, para estar seguro que el usuario entre valores válides. También usamos CSS para mejorar la aparencia de nuestra aplicación web.
 
 Lo siento por este video - mi auto-editor a veces cortaba demasiado audio.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/bDhf7tLZJ5E)
+<BlogYoutubeVideo videoId="bDhf7tLZJ5E" />
