--- a/astrowind/src/content/post/blog/2022/codigo-clave/2.mdx
+++ b/astrowind/src/content/post/blog/2022/codigo-clave/2.mdx
@@ -1,17 +1,17 @@
 ---
-title: "Noticias de la Pandemia e Inteligencia Artificial"
-date: 2022-05-16
-categories:
-  - 9 Días de Código
-authors:
-  - steve
-slug: codigo-2
+title: "CC2: Noticias de la Pandemia e Inteligencia Artificial"
+publishDate: 2022-05-16
+image: http://i3.ytimg.com/vi/iHK89uKiktY/hqdefault.jpg
+author: Steve Grice
+category: 9 Días de Código
+tags:
+  - spanish
 ---
 
 Hola amigos, hoy leemos un articulo sobre los efectos de la pandémia, y lo relacionamos a algo que podemos hacer nosotros mismos, sin equipamiento especial - aprender sobre el aprendizaje automático con Python.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/iHK89uKiktY)
+<BlogYoutubeVideo videoId="iHK89uKiktY" />
 
 Lo siento si este video es aburrido - como dije en el ultimo video, simplemente estoy experimentando para encontrar la mejor forma de video
