--- a/astrowind/src/content/post/blog/2022/codigo-clave/3.mdx
+++ b/astrowind/src/content/post/blog/2022/codigo-clave/3.mdx
@@ -1,17 +1,16 @@
 ---
-title: "Descargamos una Página Web con Python"
-date: 2022-05-17
-categories:
-  - 9 Días de Código
+title: "CC3: Descargamos una Página Web con Python"
+publishDate: 2022-05-17
+image: http://i3.ytimg.com/vi/oPaXS6d30pM/hqdefault.jpg
+author: Steve Grice
+category: 9 Días de Código
 tags:
   - python
-authors:
-  - steve
-slug: codigo-3
+  - spanish
 ---
 
 Hola a todos. En este video, tratamos de descargar los titulares de Google Noticias automaticamente. No lo logramos hacer, por lo menos para este video, pero todavia vemos cómo se puede descargar el código fuente de una página web usando Python. Tambien instalamos el paquete "requests" con pip, el administrator de paquetes más popular de Python.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/oPaXS6d30pM)
+<BlogYoutubeVideo videoId="oPaXS6d30pM" />
