Add search, fix gifs

--- a/src/content/post/blog/2018/kanban-board-onenote/index.mdx
+++ b/src/content/post/blog/2018/kanban-board-onenote/index.mdx
@@ -29,14 +29,14 @@ Let's get started. We will be creating four tables to hold tasks: Backlog, Waiti
 
 Open a new page and start typing the first column name. Press tab, and it should turn into a table. Type the next one, tab over, and repeat until you have all of the columns. Then, press enter.
 
-![Create your first table in OneNote](./1-create-table.gif)
+![Create your first table in OneNote](/blog/2018/kanban-board-onenote/1-create-table.gif)
 <figcaption>Step 1: Create the table that will serve as a template for others.</figcaption>
 
 Our first table has been set up. The next step is to copy it to make the other tables. Click and drag to highlight the entire table. Next, press `Control-C`, click somewhere else on the page, and hit `Control-V` to duplicate the table and place it somewhere else. Repeat until we have all four tables.
 
 Align your new columns horizontally and name them.
 
-![Copying the table](./2-copy-tables.gif)
+![Copying the table](/blog/2018/kanban-board-onenote/2-copy-tables.gif)
 <figcaption>Step 2: Copy the table a few times to make more than one column.</figcaption>
 
 It looks like we're all set up. Now we can put it to good use.
@@ -54,7 +54,7 @@ The task moves from Backlog to Working, where we spend some time getting it done
 
 With great patience, we wait for John to finish his part and are finally able to complete our task.
 
-![Moving a task](./4-move-task.gif)
+![Moving a task](/blog/2018/kanban-board-onenote/4-move-task.gif)
 <figcaption>Step 4: Move your task across columns as you work it.</figcaption>
 
 ## Variations on this Method
