--- a/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
+++ b/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Boom! A new app is born."
 publishDate: 2021-03-24
-image: /public/blog/2021/boom-v1.0-writeup.svg
+image: /blog/2021/boom-v1.0-writeup.svg
 author: Steve Grice
 category: Boom Languages
 tags:
@@ -124,7 +124,7 @@ I was very strict at first, making myself write the failing test before actually
 
 From what I read online, using a strongly typed language might have significantly cut down on the number of tests that I needed to write. However, until they come up with [Rails for Rust](https://users.rust-lang.org/t/something-like-ruby-on-rails-for-rust/45125) or something like that, I'm sticking with Rails because it works great.
 
-![Running Rails tests](./boom-server-rails-tests.gif)
+![Running Rails tests](/blog/2021/boom-v1.0-writeup/boom-server-rails-tests.gif)
 <figcaption>Nothing like testing your entire server-side with just 5 keystrokes!</figcaption>
 
 ## Successes
