Add remaining 2023 posts

--- a/src/content/post/blog/2023/boom/devlog-11.mdx
+++ b/src/content/post/blog/2023/boom/devlog-11.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Boom Devlog 11"
+title: "Boom Devlog 11: Measure Features 1"
 publishDate: 2023-10-27
 image: http://i3.ytimg.com/vi/xKp48w7HKI8/hqdefault.jpg
 author: Steve Grice
