--- a/src/content/post/blog/2023/boom/devlog-12.mdx
+++ b/src/content/post/blog/2023/boom/devlog-12.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Boom Devlog 12"
+title: "Boom Devlog 12: Measure Features 2"
 publishDate: 2023-11-04
 image: http://i3.ytimg.com/vi/6f2wI93lhqQ/hqdefault.jpg
 author: Steve Grice
