--- a/src/content/post/blog/2023/boom/devlog-13.mdx
+++ b/src/content/post/blog/2023/boom/devlog-13.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Boom Devlog 13"
+title: "Boom Devlog 13: Measure Features 3"
 publishDate: 2023-11-11
 image: http://i3.ytimg.com/vi/pVANzSRQWp0/hqdefault.jpg
 author: Steve Grice
