Fix tag count on tag page

--- a/src/content/post/blog/2021/getting-started-scikit-learn/index.mdx
+++ b/src/content/post/blog/2021/getting-started-scikit-learn/index.mdx
@@ -4,6 +4,7 @@ publishDate: 2021-04-17
 image: /blog/2021/getting-started-sklearn.jpg
 author: Steve Grice
 tags:
+  - artificial-intelligence
   - machine-learning
 ---
 
