--- a/src/content/post/blog/2021/linear-regression-sklearn/index.mdx
+++ b/src/content/post/blog/2021/linear-regression-sklearn/index.mdx
@@ -4,6 +4,7 @@ publishDate: 2021-05-20
 image: /blog/2021/linear-regression-sklearn.jpg
 author: Steve Grice
 tags:
+  - artificial-intelligence
   - machine-learning
 ---
 
