--- a/src/content/post/blog/2021/ml-vs-ai/index.mdx
+++ b/src/content/post/blog/2021/ml-vs-ai/index.mdx
@@ -4,6 +4,7 @@ publishDate: 2021-04-11
 image: /blog/2021/ml-vs-ai.jpg
 author: Steve Grice
 tags:
+  - artificial-intelligence
   - machine-learning
 ---
 
