Add livestreams, among other old posts/fixes

--- a/src/content/post/blog/2018/creativity-language-learning/index.mdx
+++ b/src/content/post/blog/2018/creativity-language-learning/index.mdx
@@ -4,7 +4,7 @@ publishDate: 2018-11-12
 image: /blog/2018/creativity-language-learning.jpg
 author: Steve Grice
 tags:
-  - language
+  - language-learning
   - ideas
 path: creativity-language-learning/
 ---
