--- a/src/content/post/blog/2020/duobot/index.mdx
+++ b/src/content/post/blog/2020/duobot/index.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/zhjWD8O564Q/hqdefault.jpg
 author: Steve Grice
 tags:
   - python
-  - language
+  - language-learning
 ---
 
 In this video, I show off my magical DuoLingo-playing bot made with Selenium. Its best magic trick: breaking while you're using it.
