--- a/src/content/post/blog/2021/boom/devlog-1.mdx
+++ b/src/content/post/blog/2021/boom/devlog-1.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/5kwHY_1ewd4/hqdefault.jpg
 author: Steve Grice
 category: Boom Languages
 tags:
-  - language
+  - language-learning
 ---
 
 Picking up an old project from earlier this year and making a few additions.
