--- a/src/content/post/blog/2021/boom/devlog-2.mdx
+++ b/src/content/post/blog/2021/boom/devlog-2.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/IBdZjelApI4/hqdefault.jpg
 author: Steve Grice
 category: Boom Languages
 tags:
-  - language
+  - language-learning
 ---
 
 I just finished getting Version 2.0.0 on all app stores and the web. The main new feature is an "article translation" tool. It works, but as you'll see, it's pretty buggy.
