--- a/src/content/post/blog/2021/boom/devlog-3.mdx
+++ b/src/content/post/blog/2021/boom/devlog-3.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/TuHiA5xBwVk/hqdefault.jpg
 author: Steve Grice
 category: Boom Languages
 tags:
-  - language
+  - language-learning
 ---
 
 2.0.3 is out on stores and the big change is that the article translator tool is actually somewhat usable now. Also, users receive an email on signup! Not the most exciting changes, but it's progress.
