--- a/src/content/post/blog/2021/boom/devlog-4.mdx
+++ b/src/content/post/blog/2021/boom/devlog-4.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/qvgQYVp5O9o/hqdefault.jpg
 author: Steve Grice
 category: Boom Languages
 tags:
-  - language
+  - language-learning
 ---
 
 Version 2.2.2 brings some new changes since our last dev log.
