--- a/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
+++ b/src/content/post/blog/2021/boom/v1.0-writeup/index.mdx
@@ -7,7 +7,7 @@ category: Boom Languages
 tags:
   - design
   - flutter
-  - language
+  - language-learning
 ---
 
 <figcaption>The Boom! Languages logo, created by Nick Fulfaro (<a href="https://instagram.com/fulfaroanimations">@fulfaroanimations</a>).</figcaption>
