--- a/src/content/post/blog/2022/boom/devlog-6.mdx
+++ b/src/content/post/blog/2022/boom/devlog-6.mdx
@@ -6,7 +6,7 @@ author: Steve Grice
 category: Boom Languages
 tags:
   - javascript
-  - language
+  - language-learning
 ---
 
 Let's take a look at the big plans for switching over the Boom Languages client from Flutter to React Native. It'll be a complete re-implementation, so it'll be a fair amount of work, but hopefully I can knock it out one tiny piece at at time.
