--- a/src/content/post/blog/2022/boom/devlog-7.mdx
+++ b/src/content/post/blog/2022/boom/devlog-7.mdx
@@ -6,7 +6,7 @@ author: Steve Grice
 category: Boom Languages
 tags:
   - javascript
-  - language
+  - language-learning
 ---
 
 In this video, we get our hands dirty and implement the "version" and "registration info" endpoints in the new React Native client for Boom Languages.
