--- a/src/content/post/blog/2022/duobot-is-free-now.mdx
+++ b/src/content/post/blog/2022/duobot-is-free-now.mdx
@@ -4,7 +4,7 @@ publishDate: 2022-10-03
 image: http://i3.ytimg.com/vi/voon-ylQBkI/hqdefault.jpg
 author: Steve Grice
 tags:
-  - language
+  - language-learning
   - python
 ---
 
