--- a/src/content/post/blog/2022/webgl-1.mdx
+++ b/src/content/post/blog/2022/webgl-1.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/9DY36BrGS1M/hqdefault.jpg
 author: Steve Grice
 tags:
   - javascript
-  - live-coding
+  - livestream
   - webgl
 ---
 
