--- a/src/content/post/blog/2022/webgl-2.mdx
+++ b/src/content/post/blog/2022/webgl-2.mdx
@@ -5,7 +5,7 @@ image: http://i3.ytimg.com/vi/kLlo4W3nMi8/hqdefault.jpg
 author: Steve Grice
 tags:
   - javascript
-  - live-coding
+  - livestream
   - webgl
 ---
 
