--- a/src/content/post/blog/2023/boom/devlog-10.mdx
+++ b/src/content/post/blog/2023/boom/devlog-10.mdx
@@ -6,7 +6,7 @@ author: Steve Grice
 category: Boom Languages
 tags:
   - design
-  - language
+  - language-learning
 ---
 
 Here's the video I'd show you if you were investing money in Boom Languages!
