--- a/src/content/post/blog/2023/self-hosting/longhorn-k3s.mdx
+++ b/src/content/post/blog/2023/self-hosting/longhorn-k3s.mdx
@@ -6,6 +6,7 @@ author: Steve Grice
 category: Self-Hosting
 tags:
   - kubernetes
+  - tutorial
 ---
 
 Let's wrangle us some Longhorn and install it on our cluster.
