--- a/src/content/post/blog/2023/self-hosting/nuc-kubernetes.mdx
+++ b/src/content/post/blog/2023/self-hosting/nuc-kubernetes.mdx
@@ -1,22 +1,18 @@
 ---
-title: "How to NUC the Cloud with your own Linux Server"
-publishDate: 2023-09-03
-image: http://i3.ytimg.com/vi/7Kock_b-glg/hqdefault.jpg
+title: "How to: Bare-Metal Kubernetes in Minutes on a NUC"
+publishDate: 2023-09-04
+image: http://i3.ytimg.com/vi/VHsuXefbM0E/hqdefault.jpg
 author: Steve Grice
 category: Self-Hosting
 tags:
-  - hardware
+  - kubernetes
   - tutorial
 ---
 
-You don't need a data center - we can setup one server for less than $150 that will work just as well.
+Installing Kubernetes doesn't have to be hard. We can get K3s up on our NUC in minutes - just follow these steps.
 
 import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-<BlogYoutubeVideo videoId="7Kock_b-glg" />
+<BlogYoutubeVideo videoId="VHsuXefbM0E" />
 
 Buy your own NUC (and support the channel): [Geekom Air11 NUC](https://www.amazon.com/GEEKOM-Mini-Air11-Computers-Ethernet/dp/B0C4XHHG4S?th=1&_encoding=UTF8&tag=pagekeysolu03-20&linkCode=ur2&linkId=0875e2358cdea267803695d3e4a067c9&camp=1789&creative=9325)
-
-## Notes
-
-- [How to Burn ISO - Ubuntu Docs](https://help.ubuntu.com/community/BurningIsoHowto)
