--- a/src/content/post/blog/2022/boom/devlog-5.mdx
+++ b/src/content/post/blog/2022/boom/devlog-5.mdx
@@ -6,7 +6,7 @@ author: Steve Grice
 category: Boom Languages
 tags:
   - javascript
-  - language
+  - language-learning
 ---
 
 I am starting a new take on an old project.
