--- a/src/content/post/blog/2024/plaintext-architecture.mdx
+++ b/src/content/post/blog/2024/plaintext-architecture.mdx
@@ -13,15 +13,15 @@ tags:
   - self-hosting
 ---
 
-Why aren't more applications powered by plaintext (human-readable) data? It brings so many benefits - you can store/sync the data using your filesystem, inspect the data and even apps andscripts to process it and mine for insights.
+Why aren't more applications powered by plaintext (human-readable) data? It brings so many benefits - you can store/sync the data using your filesystem, inspect the data yourself, and even write apps and scripts to process it and mine for insights.
 
-I think we need more software to be written this way. For too long, the pendulum has swung in the direction of SaaS - other people's code running on other people's computer. I think we're on the verge of inverting this. Think about it. Do you really need to connect to some distant data center to use Intuit Quickbooks for your accounting? Not if you use something like [hledger](https://hledger.org/), which serves a similar purpose, but it's completely open-source and runs locally.
+I think we need more software to be written this way. For too long, the pendulum has swung in the direction of SaaS - other people's code running on other people's computers. We may be on the verge of inverting this. Think about it. Do you really need to connect to some distant data center to use Intuit Quickbooks for your accounting? Not if you use something like [hledger](https://hledger.org/), which serves a similar purpose, but it's completely open-source and runs locally.
 
-I'm fascinated by the idea of making programming **simple** and **declarative** enough that the average person can specify how all of the apps they use work. We've certainly taken a big step in that direction with LLMs, but unless you self-host that, you're still tied to someone's ChatGPT web service running in the cloud.
+I'm fascinated by the idea of making programming **simple** and **declarative** enough that the average person can specify how all of their day-to-day applications should behave. We've certainly taken a big step in that direction with LLMs, but unless you self-host that, you're still tied to someone's ChatGPT web service running in the cloud.
 
 In this article, I'll take a step in the right direction by proposing an architecture that will allow plaintext-based applications to run on every relevant platform. Actually, it may start out as more of a process that can eventually be turned into a resuable framework.
 
-There are no shortage of fantastic tools that already exist to help with this. The challenge is integrating them together in a way that provides a great experience, both for the user and for the developer (who are, increasingly, the same person!).
+There is no shortage of fantastic tools that already exist to help with this. The challenge is integrating them together in a way that provides a great experience, both for the user and for the developer (who are, increasingly, the same person!).
 
 I envision a future where all of the applications we use are backed by plaintext, enabling people to explore their own data and write their own extensions and tools to tailor the experience to exactly what they need. To get there, we need to rethink the classic client-server architecture that's so common.
 
@@ -37,9 +37,9 @@ I think we can do better! But how?
 
 ## Proposed Architecture
 
-Start with the plaintext files, the **data**, at the absolute center, rather than a server/web app codebase. Work out from there - first, CLI to easily manage those files locally. Then, a user interface that can run locally. Then, a server to provide the same functionality to remote clients that can't really manage their own files (for example, it's REALLY tough to install Git or Python on an iPhone).
+Start with the plaintext files, the **data**, at the absolute center, rather than a server/web app codebase. Work out from there - first, create a CLI to easily manage those files locally. Then, whip up a graphical user interface that can run locally. Next, create a server to provide the same functionality to remote clients that can't really manage their own files (for example, it's REALLY tough to install Git or Python on an iPhone).
 
-Finally, the web and mobile clients to interact with that server. The result? You have one codebase that can basically run on everything and replicate the same functionality everywhere.
+Finally, implement the web and mobile clients to interact with that server, sharing as much of your local frontend code as possible. The result? You have one codebase that can basically run on everything and replicate the same functionality everywhere.
 
 ```mermaid
 flowchart TD
@@ -80,50 +80,36 @@ Let the data format drive all of the code. If you're making an accounting app, c
 
 ### CLI Second
 
-After creating some sample data, the CLI should be the next step. It's by far the easiest way to interface with the user. You don't have to worry about how things are presented - if they're used to interacting with the terminal, then they'll be able to figure it out.
+After creating some sample data, the CLI should be the next step. It's by far the easiest way to interact with the user. You don't have to worry about how things are presented - if they know how to use a terminal, they'll be able to figure it out.
+
+I think pure Rust is a great choice for this, because it's a blazing-fast systems language that has great web support and built-in package management.
+
+### Desktop Client
+
+Adding a desktop client after the CLI allows you to formalize your user interface and add some bells and whistles while keeping the feedback loop short. No need to fiddle with any networking yet, just mature your code and provide an interface that you don't need to be a CLI ninja to understand.
+
+You can use [Tauri](https://tauri.app/) to quickly and easily add a frontend to a Rust application. You can use vanilla JS or your favorite framework, such as [Next.js](https://nextjs.org/). The key will be finding a way to share the Tauri/Next code with the server and web/mobile clients.
 
 ### Server
 
-At that point, you should be able to abstract the code to handle CLI inputs away from the real file operations. Then, you can implement a server that exposes an API to perform the same operations that the CLI does. The only difference is that it's triggered by a web request instead of a user interacting with the terminal.
+At that point, the main functionality of your code (file operations) should be abstracted away. They're used in two places - the CLI and the GUI - so it should be easy to add a third. We need to create a REST API for these file operations and so that we can make changes remotely!
 
-## CLI Second
-
-Design the CLI first, then auto-generate a UI from it, etc.
-
-## Desktop Client
-
-The first thing to develop for one of these applications is the desktop client. This is where you can most easily iterate on how to files are managed and what the user interface looks like. What could be simpler than displaying some windows, clicking some buttons, and wiring up handlers to make changes on the filesystem?
-
-For this piece, I'll use Tauri as the main framework. This is a Rust framework that lets you write your UI in any JavaScript framework. For the JS side, I'll use Next.js, only because I'm most familiar with it and it comes "batteries included" with most of the libraries you'd need to make something cool.
-
-In addition to directly modifying the filesystem, you can also easily run shell commands. This allows you to use something like Git to manage, version, and back up the plaintext files. I think a similar paradigm to what Obsidian uses would be helpful here, where you can open a different "vault" to change the context of what you're working on. In this case, each vault can be a separate Git repo.
-
-## Server
-
-Now let's zoom out a bit. Instead of everything being local, we can write a server with a REST API. This API will perform the same actions that the local client did on files, but it allows you to have web/mobile clients invoke these operations.
-
-For this, I'd keep the setup as similar as possible. I'm not sure exactly how this would look - would you run the Next.js application and use its API routes for convenient access, or is there a way to expose a quick REST API directly in Rust?
+I'm not sure exactly how this would look yet - would you run the Next.js application and use its API routes for convenient access, or is there a way to expose a quick REST API directly in Rust?
 
 Rust seems to have great web support, so I'd expect that with some careful modular coding, it would be possible to get this all working together. Perhaps something like [Actix](https://actix.rs/) would be worth using.
 
-Either way, our codebase stays mostly the same - when running in server mode, you're just accepting HTTP requests to perform operations instead of Tauri commands. Authentication may come into play here eventually, but for now let's keep it simple.
+Either way, our codebase stays mostly the same - when running in server mode, you're just accepting HTTP requests to perform operations instead of Tauri or CLI commands. Authentication may come into play here eventually, but for now let's keep it simple.
 
-## Web/Mobile Clients
+### Web/Mobile Clients
 
-TODO
-Next.js static export. Capacitor for mobile. Enter URL of server to get started. Maybe authenticate.
-## Hosting: Keep it simple (Some ideas)
+Generating a web client should be as easy as running `npm run export` in your Next.js project to get a static website. There may need to be some careful `if/else` guards in place to avoid baking Tauri commands into the static export (instead, it should use the REST endpoint).
 
-TODO
-Kubernetes is pretty complicated. The whole point of this architecture is to make things more accessible for the average user. 
-docker compose. Kubernetes is great for massive scale, but too complicated and easy to break for the average self-hoster (with probably a max of 10 users anyway)
+Mobile can be generated using [Capacitor](https://capacitorjs.com/) and should be identical to the web client, save for a few platform-specific tweaks.
+
+## Hosting: Keep it simple
+
+Kubernetes is pretty complicated. The whole point of this architecture is to make things more accessible for the average user. It may make sense to provide some easy `docker-compose` tips and tricks as part of this framework, if it ever comes together. This way, anyone setting this up just needs to run `docker-compose up` and their server is off and running.
 
 ## Next Steps
 
-TODO
-Let's do this. I'm going to try to implement this architecture in KeyDo. I'll be stealing some code from Plaintext DAW to get that done, but I'll have to carefully set everything up to reflect the above and share code so that nothing is repeated.
-
-## Scaling: Federation
-
-TODO
-No idea on this. Need to research how to share data across instances to provide social features without centralized server.
+Let's do this. I want to write an application to manage my to-do's, and I'm going to name it KeyDo. I'll try to implement this architecture in KeyDo, possibly stealing some Tauri code from [Plaintext DAW](/products/ptd) along the way.
