Fill out product pages

--- a/src/content/post/blog/2024/plaintext-architecture.mdx
+++ b/src/content/post/blog/2024/plaintext-architecture.mdx
@@ -11,6 +11,7 @@ tags:
   - capacitor
   - plaintext
   - self-hosting
+category: keydo
 ---
 
 Why aren't more applications powered by plaintext (human-readable) data? It brings so many benefits - you can store/sync the data using your filesystem, inspect the data yourself, and even write apps and scripts to process it and mine for insights.
