--- a/src/content/post/blog/2024/plaintext-architecture.mdx
+++ b/src/content/post/blog/2024/plaintext-architecture.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Software Architecture for Plaintext and Self-Hosting"
+title: "A Software Architecture for Plaintext and Self-Hosting (on All Platforms)"
 publishDate: 2024-04-12
 # image: http://i3.ytimg.com/vi/Bn1Okg6Z4ac/hqdefault.jpg
 author: Steve Grice
